custom reports alignment fix

--- a/app/styles/reports.less
+++ b/app/styles/reports.less
@@ -4650,7 +4650,7 @@ only screen and (min-device-pixel-ratio: 2) {
     .first_dimension_row_holder {
      /* padding: 20px 30px 0px 30px ;*/
      padding: 20px 0px 0px 0px ;
-      margin-top: 105px;
+      margin-top: 80px;
     }
     .second_dimension_row_holder  {
       margin-left: 5px ;
@@ -4851,10 +4851,16 @@ div.reports_tabs_content_container {
     .heading_first_dimension:first-child {
       padding-left: 0 ;
     }
-    .heading_first_dimension:hover {
+    .heading_first_dimension {
       .more_dimension_arrow {
-        background: #DCE6F1 ;
-        margin-top: 8px ;
+        height: 20px;
+        background-position-y: 8px;
+        margin-top: 0 ;
+      }
+      &:hover {
+        .more_dimension_arrow {
+          background-color: #DCE6F1 ;
+        }
       }
     }
   }
